# gamings

./: .gitignore  CMakeLists.txt  build.ps1  config.ps1  run.ps1  vcpkg.json
engine/: CMakeLists.txt
engine/src/kat/: engine.cpp  engine.hpp
game/: CMakeLists.txt
game/src/game/: game.cpp  game.hpp
